--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
   <main>
     <section class="about-me">
-      <img class="my-image" src="../character_program_happy.png" alt="キラキラプログラミング君">
+      <img class="my-image" src="character_program_happy.png" alt="キラキラプログラミング君">
       <h2 class="my-name">プログラミング初心者</h2>
 
       <section class="greeting">
